--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "portfolio template",
+    "name": "myportfolio",
     "private": true,
     "description": "portfolio template with gatsby",
     "version": "0.1.0",
